Fix stucked footer

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .body {
@@ -45,10 +48,7 @@ body {
 }
 
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  margin-top: auto;
   text-align: center;
   padding: 1em;
   background-color: #bbb;
